Replaces deprecated constructor of Locale